--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js",
-    "seed": "node src/seed_payouts.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
