--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-auth-session": "~7.0.10",
     "expo-constants": "~18.0.12",
